--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,9 @@ section > p {
 }
 
 .second_section{
+    margin-top: 15px;
     height: 500px;
     background-color: yellow;
-    justify-content: center;
     align-items: center;
 }
 
@@ -197,16 +197,51 @@ div > img {
 
 .help_section{
     width: 100%;
-    height: 400px;
+    height: 650px;
     background-color: brown;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .help {
-    width: 280px;
-    height: 270px;
+    margin-top: 50px;
+    width: 360px;
+    height: 350px;
+    background-color: aqua;
+    display: inline-block;
+}
+
+.help_cont{
+    display: flex;
+    flex-direction: row;
+    background-color: darkgreen;
+    height: 400px;
+    width: 800px;
+    justify-content: space-around;
 }
 
 .cell_phone {
-    width: 170px;
-    height: 320px;
+    margin-top: 50px;
+    width: 180px;
+    height: auto;
+    background-color: aqua;
+    display: inline-block;
+}
+
+.help_buttons > div{
+    width: 175px;
+    height: 30px;
+    background-color: #60267F;
+    padding: 5px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 5px;
+    display: inline-block;
+    margin-left: 2.5px;
+    margin-top: 2.5px;
+}
+
+.help_notes {
+
 }
