--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,6 @@ section > p {
 }
 
 .fourth_section {
-    background-color: yellow;
     height: 600px;
     align-items: center;
 }
@@ -354,4 +353,133 @@ div > img {
 
 .projects > div > p:nth-child(2){
     color: #60267F;
+}
+
+.fourth_section > p:nth-child(2){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    margin: 16px 120px;
+    color: #A79D9D;
+}
+
+.subscription, .subscription > *{
+    display: inline-block;
+}
+
+
+.subscription > :nth-child(1)
+{
+    font-size: 14px;
+    color: #A79D9D;
+}
+
+.subscription > :nth-child(3)
+{
+    font-size: 14px;
+    color: #2B0236;
+}
+
+.subscription > :nth-child(2)
+{
+    width: 22px;
+    height: 12px;
+    border-radius: 6px;
+    background-color: rgb(86,230,165);
+    margin-top: 2.5px;
+    position: relative;
+}
+
+.subscription > :nth-child(2) > div{
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+    position: absolute;
+    margin-left: 13px;
+    margin-top: 3px;
+    background-color: white;
+}
+
+.subscription > :nth-child(4){
+    padding: 3px;
+    background-color: #FFE87A;
+    font-size: 8px;
+    border-radius: 4px;
+}
+
+.plans{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+}
+
+.plans > div {
+    width: 150px;
+    height: 280px;
+    border: 1px solid #AAAAAA;
+    border-radius: 6px;
+}
+
+
+.plans p {
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.7);
+    margin-top: 5px;
+}
+
+
+.plans > div > p:first-child{
+    font-size: 15px;
+    color: black;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-left: 20px;
+    display: block;
+}
+
+.plans > div > p:nth-child(2){
+    font-size: 19px;
+    color: black;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    display: block;
+}
+
+.plans span{
+    margin-left: 15px;
+}
+
+.plans > div > span:nth-child(4){
+    margin-top: 20px;
+}
+
+.plans span, .plans img, span > p{
+    display: inline-block;
+}
+
+.plans_button{
+    width: 112px;
+    height: 32px;
+    border-radius: 3px;
+    border: 1.5px solid rgba(43, 2, 54, 1);
+    color: rgba(43, 2, 54, 1);
+    padding: 7.5px;
+    text-align: center;
+    font-size: 12px;
+    margin-left: 20px;
+}
+
+.plans > div > p:nth-child(4){
+    margin: 20px;
+}
+
+.lorem{
+    height: 380px;
+    width: 100%;
+    background-color: goldenrod;
+    margin-top: 20px;
 }
